# mhs_python

./: README.md  pyproject.toml
hw1/artifacts/: input2.txt  test.sh
hw1/task1/: nl.py
hw1/task2/: tail.py
hw1/task3/: wc.py
hw2/: Dockerfile
hw2/artifacts/: report.tex  table.tex
hw2/task1/: latex_gen.py
hw2/task2/: generate_report.py  generate_table.py
hw3/: task1.py  task2.py  task3.py
hw3/artifacts/3.3/: C.txt  hash.txt
hw4/: task1.py  task2.py  task3.py
hw4/artifacts/: task1.txt  task2.out
hw5/: task1.py  task2.py
hw5/artifacts/: listings.json
